@@ -1,3 +1,9 @@
+Major changes between version 2.0 and 2.0.1
+------------------------------------------------
+  - Use ip to set and remove addresses if we have it and specify the
+    netmask.
+
+
 Major changes between version 1.0 and 2.0
 ------------------------------------------------
   - Common config stuff moved from /usr/lib/diald to /usr/share/diald
